add style to button component

--- a/app/components/blog_engine/button_component.html.erb
+++ b/app/components/blog_engine/button_component.html.erb
@@ -1,1 +1,1 @@
-<%= link_to @label, @url %>
+<%= button_to @label, @url, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
