--- a/app/views/layouts/blog_engine/application.html.erb
+++ b/app/views/layouts/blog_engine/application.html.erb
@@ -7,7 +7,7 @@
 
   <%= yield :head %>
 
-  <%= stylesheet_link_tag    "blog_engine/application", media: "all" %>
+  <%= stylesheet_link_tag "blog_engine", "data-turbo-track": "reload" %>
 </head>
 <body>
 
