--- a/app/components/blog_engine/ui/modal/component.html.erb
+++ b/app/components/blog_engine/ui/modal/component.html.erb
@@ -15,8 +15,8 @@
           <%= @title %>
         </h3>
         <form method="dialog">
-          <%= render component('ui/button').new(
-            icon: 'close-line',
+          <%= render BlogEngine::Ui::Button::Component.new(
+            # icon: 'close-line',
             scheme: :ghost,
             title: t('.close'),
           ) %>
@@ -27,11 +27,11 @@
         <%= content %>
       </div>
 
-      <% if actions? %>
-        <footer class="p-4 flex gap-2 justify-end sticky bottom-0 bg-inherit">
-          <%= actions %>
-        </footer>
-      <% end %>
+      <%# if actions? %>
+<!--        <footer class="p-4 flex gap-2 justify-end sticky bottom-0 bg-inherit">-->
+          <%#= actions %>
+<!--        </footer>-->
+      <%# end %>
     </div>
   </div>
 </dialog>
