add importmap and stimulus for modal componet

--- a/app/views/layouts/blog_engine/application.html.erb
+++ b/app/views/layouts/blog_engine/application.html.erb
@@ -8,6 +8,7 @@
   <%= yield :head %>
 
   <%= stylesheet_link_tag "blog_engine", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
 </head>
 <body>
 
